@@ -1,3 +1,7 @@
+2008-10-07  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* contrib/emacs/fricas.el: add message when FriCAS is ready
+
 2008-10-06  Martin Rubey  <martin.rubey@univie.ac.at>
 
 	* src/input/lode.input.pamphlet: convert to unittesting package
